# sw_codec_evs_utils

./: CMakeLists.txt  LICENSE  README.md
include/: sw_codec_evs_utils.h
src/: sw_codec_evs_utils.c
